# AEQUITAS

./: .env.example  .gitignore  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  keep-warm.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_market_data_tables.py  002_create_document_chunks.py
backend/app/: config.py  db.py  main.py
backend/app/agents/: earnings_agent.py  graph.py  news_sentiment_agent.py  nodes.py  portfolio_agent.py  state.py
backend/app/algorithms/execution/: twap_vwap.py
backend/app/algorithms/ml/: features.py  forecaster.py  regime_detector.py
backend/app/algorithms/portfolio/: optimiser.py
backend/app/algorithms/pricing/: black_scholes.py
backend/app/algorithms/risk/: var_cvar.py
backend/app/algorithms/signals/: factor_model.py  momentum.py  pairs.py
backend/app/api/v1/: advanced.py  agents.py  benchmark.py  extended_agents.py  health.py  history.py  market_data.py  market_data_autofetch.py  ml.py  pricing.py  signals.py  websocket.py
backend/app/backtesting/: engine.py
backend/app/data/ingestion/: market_data.py
backend/app/data/vector/: store.py
backend/app/models/: market_data.py
backend/app/services/: finnhub_client.py  price_stream.py
backend/cpp/: CMakeLists.txt  README.md  benchmark.py  kernels.cpp  make_benchmark_chart.py  pyproject.toml  test_equivalence.py
backend/tests/: conftest.py
backend/tests/api/: aequitas.http
backend/tests/unit/: test_advanced_algorithms.py  test_agents.py  test_black_scholes.py  test_extended_agents.py  test_features.py  test_health.py  test_history.py  test_market_data_ingestion.py  test_portfolio_optimiser.py  test_price_stream.py  test_regime.py  test_signals.py  test_var_cvar.py
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/agents/: page.tsx
frontend/app/backtests/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/factors/: page.tsx
frontend/app/performance/: page.tsx
frontend/app/risk/: page.tsx
frontend/app/theses/: page.tsx
frontend/components/charts/: CandlestickChart.tsx
frontend/components/layout/: Sidebar.tsx  ThemeProvider.tsx
frontend/components/ui/: AgentProgress.tsx  Badge.tsx  InsightStrip.tsx  PageHeader.tsx  Spinner.tsx  StatCard.tsx  StatusIndicator.tsx
frontend/hooks/: usePriceStream.ts
frontend/lib/: api.ts
infra/: docker-compose.yml  init-db.sql
