# ═══════════════════════════════════════════════════════════════
#  AEQUITAS Backend — pyproject.toml
#  Single config file for: dependencies, ruff, mypy, pytest
# ═══════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aequitas-backend"
version = "0.1.0"
description = "AEQUITAS — Agentic Quant Research Platform"
requires-python = ">=3.12"

dependencies = [
    # ── Web framework ──────────────────────────────────────────
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    # ── Database ───────────────────────────────────────────────
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",

    # ── Cache ──────────────────────────────────────────────────
    "redis[asyncio]==5.1.0",

    # ── HTTP client ────────────────────────────────────────────
    "httpx==0.27.2",

    # ── Auth ───────────────────────────────────────────────────
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # ── Utilities ──────────────────────────────────────────────
    "python-multipart==0.0.12",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-redis==4.6.0.20241004",
    "types-passlib==1.7.7.20240819",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that hit the database or external services",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
