[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "aequitas-kernels"
version = "0.1.0"
description = "C++20 rolling-window feature-engineering kernels for AEQUITAS (pybind11)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Adit Jigneshbhai Shah", email = "ashah45@ncsu.edu" }]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
test = ["pandas>=2.0", "pytest>=8.0"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
